// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <div
      className="SourceSelect"
    >
      <input
        checked={true}
        className="SourceSelect-radio"
        onChange={[Function]}
        type="radio"
        value="HN"
      />
      HN
      <input
        checked={false}
        className="SourceSelect-radio"
        onChange={[Function]}
        type="radio"
        value="Reddit"
      />
      Reddit
    </div>
    <form
      className="search"
      onSubmit={[Function]}
    >
      <input
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value="react"
      />
      <button
        className="button-clickable"
        type="submit"
      >
        Search
      </button>
    </form>
    <div
      className="table"
    >
      <div
        className="table-header"
      >
        <span
          style={
            Object {
              "width": "40%",
            }
          }
        >
          <span>
            <button
              className="button-inline"
              onClick={[Function]}
            >
              Title
            </button>
          </span>
        </span>
        <span
          style={
            Object {
              "width": "30%",
            }
          }
        >
          <span>
            <button
              className="button-inline"
              onClick={[Function]}
            >
              Date
            </button>
          </span>
        </span>
        <span
          style={
            Object {
              "width": "10%",
            }
          }
        >
          <span>
            <button
              className="button-inline"
              onClick={[Function]}
            >
              Comments
            </button>
          </span>
        </span>
        <span
          style={
            Object {
              "width": "10%",
            }
          }
        >
          <span>
            <button
              className="button-inline"
              onClick={[Function]}
            >
              Points
            </button>
          </span>
        </span>
        <span
          style={
            Object {
              "width": "10%",
            }
          }
        >
          <i
            className="fa fa-trash"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    className="interactions"
  >
    <i
      className="fa fa-spinner fa-spin fa-3x"
    />
  </div>
</div>
`;

exports[`Button has a valid snapshot 1`] = `
<button
  className=""
>
  Button
</button>
`;

exports[`ResultTable has a valid snapshot 1`] = `
<div
  className="table"
>
  <div
    className="table-header"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <span>
        <button
          className="button-inline"
          onClick={[Function]}
        >
          Title
        </button>
      </span>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <span>
        <button
          className="button-inline"
          onClick={[Function]}
        >
          Date
        </button>
      </span>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <span>
        <button
          className="button-inline"
          onClick={[Function]}
        >
          Comments
        </button>
      </span>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <span>
        <button
          className="button-inline"
          onClick={[Function]}
        >
          Points
        </button>
      </span>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <i
        className="fa fa-trash"
      />
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a>
        1
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      Invalid Date
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <a
        href="undefinedy"
      >
        1
      </a>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
      >
        Dismiss
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a>
        2
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      Invalid Date
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <a
        href="undefinedx"
      >
        1
      </a>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
      >
        Dismiss
      </button>
    </span>
  </div>
</div>
`;

exports[`Search has a valid snapshot 1`] = `
<form
  className="search"
>
  <input
    type="text"
  />
  <button
    className="button-clickable"
    type="submit"
  >
    Search
  </button>
</form>
`;
